@@ -1,2 +1,0 @@
-This package contains the library and header files for the X Trap Library.
-This is from the modular X.org project.
