@@ -1,23 +1,0 @@
-# $NetBSD: Makefile,v 1.9 2018/03/07 11:57:35 wiz Exp $
-
-DISTNAME=		libXTrap-1.0.1
-PKGREVISION=		1
-CATEGORIES=		x11 devel
-MASTER_SITES=		${MASTER_SITE_XORG:=lib/}
-EXTRACT_SUFX=		.tar.bz2
-
-MAINTAINER=		joerg@NetBSD.org
-HOMEPAGE=		http://xorg.freedesktop.org/
-COMMENT=		X Trap Library
-
-USE_LIBTOOL=		yes
-GNU_CONFIGURE=		yes
-USE_TOOLS+=		pkg-config
-
-PKGCONFIG_OVERRIDE+=	xtrap.pc.in
-
-.include "../../x11/libX11/buildlink3.mk"
-.include "../../x11/libXext/buildlink3.mk"
-.include "../../x11/libXt/buildlink3.mk"
-.include "../../x11/xorgproto/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
