@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2006/11/03 20:58:20 joerg Exp $
-lib/libXTrap.la
-lib/pkgconfig/xtrap.pc
