@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.3 2015/11/04 03:28:45 agc Exp $
-
-SHA1 (libXTrap-1.0.1.tar.bz2) = 40850a53d916730720b8b32e9ebd5969f66115bf
-RMD160 (libXTrap-1.0.1.tar.bz2) = efd57663d5d032f7ae3230be963b1c1931e4b8ea
-SHA512 (libXTrap-1.0.1.tar.bz2) = 638f79aeb7a68aaff51839266c74b5e4f875e5bb2b473f01a637ea0dd75e4fbc7350612ff27dc12716142397c824fe16b178003015878f34f439d90d748391f1
-Size (libXTrap-1.0.1.tar.bz2) = 269484 bytes
