@@ -1,1 +1,0 @@
-XTrap sample clients.
