@@ -1,16 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2015/07/02 12:38:33 rodent Exp $
-bin/xtrapchar
-bin/xtrapin
-bin/xtrapinfo
-bin/xtrapout
-bin/xtrapproto
-bin/xtrapreset
-bin/xtrapstats
-man/man1/xtrap.1
-man/man1/xtrapchar.1
-man/man1/xtrapin.1
-man/man1/xtrapinfo.1
-man/man1/xtrapout.1
-man/man1/xtrapproto.1
-man/man1/xtrapreset.1
-man/man1/xtrapstats.1
