@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.3 2018/03/24 06:59:25 wiz Exp $
-
-SHA1 (xtrap-1.0.3.tar.bz2) = 1f1df2c1cb6422238d4dc2708b15445d1af9bdad
-RMD160 (xtrap-1.0.3.tar.bz2) = a932b596e045466845430536a9502896e3253812
-SHA512 (xtrap-1.0.3.tar.bz2) = cdb205859a96a64ede8ce1df119c318e5b6d35107425996c18be0ec56a6287a0564d768f93012f301cb91d517f67261de5c76441c0bfb796cc0190799aaf6c2f
-Size (xtrap-1.0.3.tar.bz2) = 134065 bytes
